--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marketika</title>
   
 	<link rel="stylesheet" href="/css/style.css"> 
@@ -198,7 +199,7 @@
 
 <!-- footer -->
 <section class="section-outer section-footer">
-  <ul class="section-inner">
+  <!-- <ul class="section-inner"> -->
 	<div class="section-footer__logo">
 			Marketika
 	</div>
@@ -211,13 +212,13 @@
 	</ul>
 	<div class="section-footer__copyright_and_links">
 		<div class="section-footer__copyright_and_links-copyright">
-			Copyright © Sepra 2018 All Right Resereved
+			Copyright © Panacea 2019 All Right Resereved
 		</div>
 		<div class="section-footer__copyright_and_links-links">
 			<ul class="helper-links">
-				<li><a href="">Privacy Policy</a></li>
-				<li><a href="">Terms Of Services</a></li>
-				<li><a href="">Security</a></li>
+				<li class="helper-links_item"><a href="" class="helper-links_item-link">Privacy Policy</a></li>
+				<li class="helper-links_item"><a href="" class="helper-links_item-link">Terms Of Services</a></li>
+				<li class="helper-links_item"><a href="" class="helper-links_item-link">Security</a></li>
 			</ul>
 		</div>
 	</div>
