--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marketika</title>
   
-	<link rel="stylesheet" href="/css/style.css"> 
+	<link rel="stylesheet" href="responsive-selling-landing-Marketika/css/style.css"> 
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
 
 </head>
